Bug 1055655 - Fix warnings turned to errors by bug 1018288 found by mingw build. r=ted,jmathies

--HG--
extra : rebase_source : 2e1d8d0ae697515994b718634f8f8ae9b26b8d80