hal/windows/WindowsGamepad.cpp
@@ -50,6 +50,8 @@ const uint32_t kDevicesChangedStableDelay = 200;
 // poll it periodically. 50ms is arbitrarily chosen.
 const uint32_t kXInputPollInterval = 50;
 
+const UINT kRawInputError = (UINT)-1;
+
 #ifndef XUSER_MAX_COUNT
 #define XUSER_MAX_COUNT 4
 #endif
@@ -178,7 +180,7 @@ bool
 GetPreparsedData(HANDLE handle, nsTArray<uint8_t>& data)
 {
   UINT size;
-  if (GetRawInputDeviceInfo(handle, RIDI_PREPARSEDDATA, nullptr, &size) < 0) {
+  if (GetRawInputDeviceInfo(handle, RIDI_PREPARSEDDATA, nullptr, &size) == kRawInputError) {
     return false;
   }
   data.SetLength(size);
@@ -418,13 +420,13 @@ WindowsGamepadService::ScanForRawInputDevices()
 
   UINT numDevices;
   if (GetRawInputDeviceList(nullptr, &numDevices, sizeof(RAWINPUTDEVICELIST))
-      == -1) {
+      == kRawInputError) {
     return;
   }
   nsTArray<RAWINPUTDEVICELIST> devices(numDevices);
   devices.SetLength(numDevices);
   if (GetRawInputDeviceList(devices.Elements(), &numDevices,
-                            sizeof(RAWINPUTDEVICELIST)) == -1) {
+                            sizeof(RAWINPUTDEVICELIST)) == kRawInputError) {
     return;
   }
 
@@ -631,7 +633,7 @@ WindowsGamepadService::GetRawGamepad(HANDLE handle)
 
   RID_DEVICE_INFO rdi = {};
   UINT size = rdi.cbSize = sizeof(RID_DEVICE_INFO);
-  if (GetRawInputDeviceInfo(handle, RIDI_DEVICEINFO, &rdi, &size) < 0) {
+  if (GetRawInputDeviceInfo(handle, RIDI_DEVICEINFO, &rdi, &size) == kRawInputError) {
     return false;
   }
   // Ensure that this is a device we care about
@@ -642,14 +644,13 @@ WindowsGamepadService::GetRawGamepad(HANDLE handle)
   Gamepad gamepad = {};
 
   // Device name is a mostly-opaque string.
-  if (GetRawInputDeviceInfo(handle, RIDI_DEVICENAME, nullptr, &size) < 0) {
+  if (GetRawInputDeviceInfo(handle, RIDI_DEVICENAME, nullptr, &size) == kRawInputError) {
     return false;
   }
 
   nsTArray<wchar_t> devname(size);
   devname.SetLength(size);
-  if (GetRawInputDeviceInfo(handle, RIDI_DEVICENAME, devname.Elements(), &size)
-      <= 0) {
+  if (GetRawInputDeviceInfo(handle, RIDI_DEVICENAME, devname.Elements(), &size) == kRawInputError) {
     return false;
   }
 
@@ -667,7 +668,7 @@ WindowsGamepadService::GetRawGamepad(HANDLE handle)
   size = sizeof(name);
   nsTArray<char> gamepad_name;
   HANDLE hid_handle = CreateFile(devname.Elements(), GENERIC_READ | GENERIC_WRITE,
-    FILE_SHARE_READ | FILE_SHARE_WRITE, NULL, OPEN_EXISTING, NULL, NULL);
+    FILE_SHARE_READ | FILE_SHARE_WRITE, NULL, OPEN_EXISTING, 0, NULL);
   if (hid_handle) {
     if (mHID.mHidD_GetProductString(hid_handle, &name, size)) {
       int bytes = WideCharToMultiByte(CP_UTF8, 0, name, -1, nullptr, 0, nullptr,
@@ -786,7 +787,7 @@ WindowsGamepadService::HandleRawInput(HRAWINPUT handle)
   nsTArray<uint8_t> data(size);
   data.SetLength(size);
   if (GetRawInputData(handle, RID_INPUT, data.Elements(), &size,
-                      sizeof(RAWINPUTHEADER)) < 0) {
+                      sizeof(RAWINPUTHEADER)) == kRawInputError) {
     return false;
   }
   PRAWINPUT raw = reinterpret_cast<PRAWINPUT>(data.Elements());
